--- a/2_HTML_CSS/index.html
+++ b/2_HTML_CSS/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"><!-- UTF-8 is an encoding UNIVERSAL TEST FORMAT-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palak's Website</title>
 </head>
+
 <body>
     <!-- HEADINGS-->
     <h1>I am Heading 1</h1>
@@ -15,5 +17,54 @@
     <h5>I am Heading 5</h5>
     <h6>I am Heading 6</h6>
     <h7>I am Heading 7</h7>
+
+    <!-- PARAGRAPHS-->
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, ea?</p><!-- lorem10-->
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolores totam amet laudantium saepe eaque,
+        similique cupiditate laborum voluptates quod culpa natus, minima placeat laboriosam debitis nulla assumenda
+        quibusdam quo?</p><!-- lorem-->
+
+
+    <!-- DIVISION OF WEBSITE WITH DIV TAB-->
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse perferendis dolorum repudiandae accusamus
+            sapiente, assumenda quidem velit nostrum aspernatur voluptates quaerat nisi officia fugit voluptatibus
+            corrupti dolore commodi. Dolor, provident.</p>
+    </div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, iure ex necessitatibus quasi quo earum quos
+        accusantium officiis perspiciatis dolores dolorem enim id eum possimus nostrum esse, reprehenderit maxime qui.
+
+    </div>
+
+    <!-- LISTS-->
+    <!-- UNORDERED LISTS-->
+    <ul>
+        <li>ITEM 1</li>
+        <li>ITEM 2</li>
+        <li>ITEM 3</li>
+    </ul>
+
+    <!-- By default the li tag gives us unordered list-->
+
+    <!--  ORDERED LISTS-->
+    <ol>
+        <li>ITEM 4</li>
+        <li>ITEM 5</li>
+        <li>ITEM 6</li>
+    </ol>
+
+    <!-- SPAN TAG = In a paragraph if you want to change the style of a specific segment of a paragraph -->
+    <p>Lorem ipsum dolor sit amet consectetur <span style="color :aquamarine;">adipisicing</span> elit. Pariatur, ratione?</p>
+
+    <!-- ANCHOR TAGS-->
+    <a href='https://github.com/Palaksingh02'>Palak Git Hub Profile</a>
+
+    <div> </div>
+
+    <!-- IMAGE TAG-->
+    <img width=300 src="https://yt3.ggpht.com/a/AATXAJzGRFf-wWUwwcHgRIAx3T6wl3NDgwgViC2JNA=s900-c-k-c0xffffffff-no-rj-mo">
+    <h2><span style="background-color: burlywood; color:darkblue">LORD PALAK SINGH</span></h2>
 </body>
+
+
 </html>
