--- a/2_HTML_CSS/index.html
+++ b/2_HTML_CSS/index.html
@@ -54,7 +54,8 @@
     </ol>
 
     <!-- SPAN TAG = In a paragraph if you want to change the style of a specific segment of a paragraph -->
-    <p>Lorem ipsum dolor sit amet consectetur <span style="color :aquamarine;">adipisicing</span> elit. Pariatur, ratione?</p>
+    <p>Lorem ipsum dolor sit amet consectetur <span style="color :aquamarine;">adipisicing</span> elit. Pariatur,
+        ratione?</p>
 
     <!-- ANCHOR TAGS-->
     <a href='https://github.com/Palaksingh02'>Palak Git Hub Profile</a>
@@ -62,8 +63,31 @@
     <div> </div>
 
     <!-- IMAGE TAG-->
-    <img width=300 src="https://yt3.ggpht.com/a/AATXAJzGRFf-wWUwwcHgRIAx3T6wl3NDgwgViC2JNA=s900-c-k-c0xffffffff-no-rj-mo">
+    <img width=300
+        src="https://yt3.ggpht.com/a/AATXAJzGRFf-wWUwwcHgRIAx3T6wl3NDgwgViC2JNA=s900-c-k-c0xffffffff-no-rj-mo" alt="This is lord voldermort">
     <h2><span style="background-color: burlywood; color:darkblue">LORD PALAK SINGH</span></h2>
+
+    <div></div>
+
+    <!-- TABLES-->
+    <table border=2></span>>
+        <thead>
+            <tr>
+                <th>Heading 1</th><!-- table heading-->
+                <th>Heading 2</th>
+                <th>Heading 3</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>I am Data 1</td><!-- table data-->
+                <td>I am Data 2</td>
+                <td>I am Data 3</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 
 
