--- a/2_HTML_CSS/index.html
+++ b/2_HTML_CSS/index.html
@@ -54,7 +54,7 @@
     </ol>
 
     <!-- SPAN TAG = In a paragraph if you want to change the style of a specific segment of a paragraph -->
-    <p>Lorem ipsum dolor sit amet consectetur <span style="color :aquamarine;">adipisicing</span> elit. Pariatur,
+    <p>Lorem ipsum dolor sit amet consectetur <span style="color :darkblue;background-color: aqua;">adipisicing</span> elit. Pariatur,
         ratione?</p>
 
     <!-- ANCHOR TAGS-->
@@ -91,4 +91,12 @@
 </body>
 
 
+
+
 </html>
+
+<!-- CSS Selectors-> Web scrapping(It brings all the important part of website)
+     CSS are of threee types: 1. Inline : <span>
+                              2.Internal : 
+                              3.External :
+                            -->
