--- a/2_HTML_CSS/inline_block.html
+++ b/2_HTML_CSS/inline_block.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <!-- h1 is block element in which the next tag wherever written will come below the first one-->
+    <!-- A block element always starts from a new line eg. h1-->
+    <!-- An inline element does not starts from a new line, infact space bhi nhi leta ek bhi-->
     <h1>I am heading 1</h1>
-    <h1>I am heading 2</h1>
+    <h1>I am heading <span style="color: red;">Red</span></h1>
     
 </body>
 </html>
