--- a/2_HTML_CSS/index.html
+++ b/2_HTML_CSS/index.html
@@ -36,7 +36,7 @@
 
     </div>
 
-    <!-- LISTS-->
+    <!-- LISTS are records-->
     <!-- UNORDERED LISTS-->
     <ul>
         <li>ITEM 1</li>
@@ -54,11 +54,11 @@
     </ol>
 
     <!-- SPAN TAG = In a paragraph if you want to change the style of a specific segment of a paragraph -->
-    <p>Lorem ipsum dolor sit amet consectetur <span style="color :darkblue;background-color: aqua;">adipisicing</span> elit. Pariatur,
+    <p>Lorem ipsum dolor sit amet consectetur <span style="color :darkblue;background-color:darkkhaki;">adipisicing</span> elit. Pariatur,
         ratione?</p>
 
     <!-- ANCHOR TAGS-->
-    <a href='https://github.com/Palaksingh02'>Palak Git Hub Profile</a>
+    <a href='https://github.com/Palaksingh02'>Palak's Dynasty</a><!-- href stands for https reference-->
 
     <div> </div>
 
@@ -70,7 +70,7 @@
     <div></div>
 
     <!-- TABLES-->
-    <table border=2></span>>
+    <table border=2>
         <thead>
             <tr>
                 <th>Heading 1</th><!-- table heading-->
