--- a/2_HTML_CSS/css_folder/font.html
+++ b/2_HTML_CSS/css_folder/font.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         .heading1{
-            font-family: 'Helvetica';
+            font-family: 'Helvetica';/*In case you do not recieve your desired output try removing '' maybe it works*/
             color:aquamarine;
             font-weight: bolder;
             font-size:20px;
