--- a/2_HTML_CSS/css_folder/padding.html
+++ b/2_HTML_CSS/css_folder/padding.html
@@ -8,9 +8,14 @@
 
     <style>
         .container{
-            border : 3px solid tomato;
+            /*border : 3px solid tomato;*/
             background-color :lightgreen;
             /*We can set top right left bottom for margins and paddings*/
+
+            border-top: 10px solid cyan;
+            border-bottom: 5px solid maroon;
+            border-left: 7px solid lightcoral;
+            border-right: 10px solid darkgreen;
 
             /*padding-top : 40px;
             padding-bottom: 40px;
@@ -22,6 +27,8 @@
 
             /*top right bottom left*/
             padding : 40px 40px 70px 50px;
+            margin : 20px 10px 10px 10px;
+            border-radius : 50px
         }
     </style>
 </head>
