--- a/2_HTML_CSS/Project/website.html
+++ b/2_HTML_CSS/Project/website.html
@@ -9,6 +9,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>DEV 101</h1>
+
+        <nav>
+            <ul>
+                <l1><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></l1>
+                <l1><a href="https://en.wikipedia.org/wiki/CSS">CSS</a></l1>
+                <l1><a href="https://en.wikipedia.org/wiki/Javascript">JAVASCRIPT</a></l1>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <img src="./final/lap.jpeg" class="showcase" alt="Laptop Image">
+    </section>
+
+    <div>
+
+    </div>
+
+    <article>
+        <div class="container">
+            <img src="./final/html.png">
+            <h2>HTML</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, enim?</p>
+        </div>
+        <div class="container">
+            <img src="./final/css.png">
+            <h2>CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, enim?</p>
+        </div>
+        <div class="container">
+            <img src="./final/icon.png">
+            <h2>JAVASCRIPT</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, enim?</p>
+        </div>
+    </article>
+
+    <footer>
+        &copy;Made with Love
+    </footer>
     
 </body>
 </html>
