--- a/Personal_Learning/index.html
+++ b/Personal_Learning/index.html
@@ -10,3 +10,8 @@
     
 </body>
 </html>
+<!-- HTML stands for Hypertext Markup Language
+What do you mean by Hypertext?
+Documents which we design through this can have links
+What do you mean by Markup?
+Multiple elements having tags which marks start and end of element in designing-->
